--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,10 +10,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: 'latest'
           bundler-cache: true
+      
       - name: Set execute permission on script
         run: chmod +x script/bootstrap
+
       - name: build
         run: script/bootstrap
       - name: test
