--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 'latest'
+          ruby-version:  '3.0.0'
           bundler-cache: true
       
       - name: Set execute permission on script
