--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
           bundler-cache: true
       
       - name: Set execute permission on script
-        run: 
+        run: |
           chmod +x script/bootstrap
           chmod +x script/cibuild        
 
