--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,8 @@ jobs:
       - name: Set execute permission on script
         run: |
           chmod +x script/bootstrap
-          chmod +x script/cibuild        
+          chmod +x script/cibuild
+          chmod +x script/validate-html        
 
       - name: build
         run: script/bootstrap
