--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+title: 欢迎关注百宝箱箱
+description: 人生没有白走的路，你现在所有的努力，要么赚经历，要么赚阅历，要么赚财富。
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
