--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,10 @@
 on:
-  push:
-  pull_request:
-    types: [opened, synchronize]
+  # push:
+  # pull_request:
+  #   types: [opened, synchronize]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
